# snake-rust

./: README.md  VERSION
snake/: Cargo.toml
snake-client/: Cargo.toml
snake-client/src/: lib.rs  lib.rs.map  main.rs  mod.rs  mod.rs.map
snake-game/: Cargo.toml
snake-game/src/: lib.rs  lib.rs.map  main.rs  mod.rs  mod.rs.map
snake-server/: Cargo.toml
snake-server/src/: lib.rs.map  main.rs  mod.rs  mod.rs.map
snake-test/: Cargo.toml
snake-test/src/: lib.rs  lib.rs.map  main.rs  mod.rs  mod.rs.map
snake/src/: lib.rs  lib.rs.map  main.rs  mod.rs  mod.rs.map
std/: Cargo.toml
std/src/: lib.rs  lib.rs.map  main.rs
std/src/io/: mod.rs  mod.rs.map  support.rs
std/src/json/: mod.rs  mod.rs.map
std/src/net/: mod.rs  mod.rs.map
std/src/regex/: mod.rs  mod.rs.map
std/src/temporal/: mod.rs  mod.rs.map
std/src/testing/: mod.rs  mod.rs.map
std/src/ws/: mod.rs  mod.rs.map  support.rs
temper-core/src/: lib.rs
